-fix: Screen Width Change by Scrollbar.

--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -5,10 +5,12 @@
 html {
   height: 100%;
   font-size: 14px;
+  overflow-y: scroll;
 }
 
 body {
   height: 100%;
+  // min-width: 1240px;
   color: @color-text;
   background: #f5f5f5;
   min-width: 1240px;
